media query update

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -73,3 +73,14 @@ p,
 li {
   color: #f28482;
 }
+@media (max-width: 600px) {
+  main {
+    width: 90%;
+  }
+  input {
+    width: 65%;
+  }
+  button {
+    width: 25%;
+  }
+}
