--- a/src/style/style.css
+++ b/src/style/style.css
@@ -78,4 +78,16 @@ span {
 p,
 li {
   color: #f28482;
+}
+
+@media (max-width: 600px) {
+  main {
+    width: 90%;
+  }
+  input {
+    width: 65%;
+  }
+  button {
+    width: 25%;
+  }
 }/*# sourceMappingURL=style.css.map */
